
[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'jpost-rdf-converter2'
version = '1.0.0'
requires-python = '>=3.9'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']
include = ['rdf_converter*']

[project.scripts]
rdf-convert = 'rdf_converter.cli_converter:app'
protein-optimize = 'rdf_converter.cli_optimizer:app'